Fixed scrollbar appearance.

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -13,6 +13,7 @@ body,
   background: #f7f5f9;
   max-width: 100vw;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 :root {
@@ -174,4 +175,24 @@ div.SelectInputOptions-content {
   padding: 0 !important;
   max-width: 280px !important;
   overflow-x: hidden !important;
+}
+
+div::-webkit-scrollbar-track:horizontal,
+div::-webkit-scrollbar-track {
+  background-color: transparent;
+  width: 0px;
+}
+
+div::-webkit-scrollbar:horizontal,
+div::-webkit-scrollbar {
+  width: 12px;
+}
+
+div::-webkit-scrollbar-thumb:horizontal,
+div::-webkit-scrollbar-thumb {
+  background-color: #bfb3c4;
+}
+
+::-webkit-scrollbar:horizontal {
+  height: 8px;
 }
